[Collection] add collection feature (#3)
* chore: add README.md file

* feat(app): add collection routes

* feat(collection): add http handler collection

* docs: add API Spec collection

* feat(app): add domain factory collection

* feat(collection): add repository handler collection

* feat(collection): collection migration schema

* feat(collection): collections table representation

* feat(collection): collection request DTO

* fix: add tag form name

* feat(collection): collection response DTO

* feat(collection): add service handler collection
