# models/domain/collection.go
@@ -1,0 +1,10 @@
+package domain
+
+import "time"
+
+type Collection struct {
+	ID        string
+	Name      string
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
